# ProgrammedDifferentlyWebApp

./: database.sql  database.text  manage.py  pyproject.toml  render.yaml
jcmcsite/: asgi.py  settings.py  urls.py  wsgi.py
render/: forms.py  functions.py  models.py  views.py
render/migrations/: 0001_initial.py  0002_rename_uploadform_uploadmodel.py  0002_uploadmodel_gender.py  0003_uploadmodel_pylint_score.py  0004_remove_uploadmodel_pylint_score.py  0005_uploadmodel_pylint_score.py  0006_auto_20231205_0817.py  0007_rename_gender_guess_probs_uploadmodel_gender_guess_proba.py  0008_auto_20231205_0955.py
render/static/: staticfiles.b96c7638ba71.json.br  staticfiles.json  staticfiles.json.br
render/static/render/: gender_guess_model_mk4-down.pkl.br  pyfile_responses.565bf9115e8c.csv  pyfile_responses.csv  pyfile_responses.csv.br  pylint_error_names.c44949d827ff.txt  pylint_error_names.c44949d827ff.txt.br  python_file.py  python_file.py.br
render/templates/render/: index.html  results.html
