[tool.poetry]
name = "jcmcsite"
version = "0.1.0"
description = ""
authors = ["SianJMBrooke <s.j.brooke@lse.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "3.2"
pandas = "1.1.5"
pickle5 = "0.0.11"
pylint = "2.13.2"
scikit-learn = "1.0.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {version = "6.1.0", extras = ["brotli"]}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
